--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Woche 13 H 01</name>
+	<name>Woche 13 H 01 - Pingu-Dating</name>
 	<comment></comment>
 	<projects>
 	</projects>
